deploy/k3s/production/database-production.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-production
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
          imagePullPolicy: Always
          resources:
            requests:
              memory: 1Gi
              cpu: "500m"
            limits:
              memory: 2Gi
              cpu: "1"
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-production-pvc
