deploy/k3s/production/backend-production.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: production
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      automountServiceAccountToken: false
      containers:
        - name: backend
          image: sportek/minecraft-stats-backend:production-2.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3333
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
              ephemeral-storage: "1Gi"
            limits:
              cpu: "250m"
              memory: "256Mi"
              ephemeral-storage: "2Gi"
          volumeMounts:
            - name: data-storage
              mountPath: /app/data
      volumes:
        - name: data-storage
          persistentVolumeClaim:
            claimName: backend-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: production
spec:
  selector:
    app: backend
  ports:
    - name: http
      protocol: TCP
      port: 3333
      targetPort: 3333
  type: ClusterIP
